--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -99,3 +99,8 @@ div.button, div.checker, div.radio, div.selector, div.uploader {
     border-radius: calc(.15rem - 1px);
     box-shadow: 0 1px 15px rgba(0,0,0,0.04), 0 1px 6px rgba(0,0,0,0.04);
 }
+
+.todo-list .todo-item .todo-item-author {
+    float: right;
+    color: #6C7588;
+}
